--- a/css/practice08.css
+++ b/css/practice08.css
@@ -1,48 +1,57 @@
 .color-yellow {
     background-color: yellow;
     border: 2px solid black ;
-    height: 75px;
-    margin: 10px
+    height: 110px;
+    margin: 10px;
+    width: 100%;
 }
 .color-pink {
     background-color: white;
-    height: 75px;
-    margin: 10px;
+    height: 70px;
+    width: 100%;
+    margin: 40px;
     display:flex;
-    justify-content: space-around;
+    justify-content: space-between;
+ 
 }
 .pink1 {
     background-color:pink;   
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink2 {
     background-color: pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink3 {
     background-color:pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink4 {
     background-color: pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 15%;
+
 }
 .roundg {
-    height: 75px;
-    width: 75px;
+    margin-right: 30px;
+    width: 25%;
     background-color: green;
     border-radius: 50%;
     border: 2px solid black;
-    flex-basis: 8%;
+    flex-basis: 15%;
 }
 
 .color-grey {
     background-color: white;
-    height: 150px;
+    height: 140px;
+    width: 100%;
     margin: 10px;
     display:flex;
     justify-content: space-between;
@@ -50,7 +59,8 @@
 .color-blue {
     background-color: steelblue;
     border: 2px solid black ;
-    height: 150px;
+    height: 160px;
+    width: 100%;
     margin: 10px;
 }
 .color1 {
@@ -58,7 +68,6 @@
     border: 2px solid black;
     flex-basis: 20%;
 }
-
 .color2 {
     background-color: skyblue;
     border: 2px solid black;
