--- a/css/practice09.css
+++ b/css/practice09.css
@@ -1,8 +1,9 @@
 .color-yellow {
     background-color: yellow;
     border: 2px solid black ;
-    height: 75px;
+    height: 110px;
     margin: 10px;
+    width: 100%;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -12,53 +13,62 @@
     border: 2px solid black;
     height: 50px;
     width: 80px;
-    margin: 10px;
+    margin: 30px;
 
 }
 .login {
     align-self: flex-end;
     margin-right: 2%;
+    font-size: xx-large;
 }
 
 .color-pink {
     background-color: white;
-    height: 75px;
-    margin: 10px;
+    height: 70px;
+    width: 100%;
+    margin: 40px;
     display:flex;
-    justify-content: space-around;
+    justify-content: space-between;
+ 
 }
 .pink1 {
     background-color:pink;   
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink2 {
     background-color: pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink3 {
     background-color:pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink4 {
     background-color: pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 15%;
+
 }
 .roundg {
-    height: 75px;
-    width: 75px;
+    margin-right: 30px;
+    width: 25%;
     background-color: green;
     border-radius: 50%;
     border: 2px solid black;
-    flex-basis: 8%;
+    flex-basis: 15%;
 }
 
 .color-grey {
     background-color: white;
-    height: 150px;
+    height: 140px;
+    width: 100%;
     margin: 10px;
     display:flex;
     justify-content: space-between;
@@ -66,15 +76,16 @@
 .color-blue {
     background-color: steelblue;
     border: 2px solid black ;
-    height: 150px;
+    height: 160px;
+    width: 100%;
     margin: 10px;
 }
+
 .color1 {
     background-color: grey;
     border: 2px solid black;
     flex-basis: 20%;
 }
-
 .color2 {
     background-color: skyblue;
     border: 2px solid black;
