--- a/css/practice10.css
+++ b/css/practice10.css
@@ -1,8 +1,9 @@
 .color-yellow {
     background-color: yellow;
     border: 2px solid black ;
-    height: 75px;
+    height: 110px;
     margin: 10px;
+    width: 100%;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -12,53 +13,62 @@
     border: 2px solid black;
     height: 50px;
     width: 80px;
-    margin: 10px;
+    margin: 30px;
 
 }
 .login {
     align-self: flex-end;
     margin-right: 2%;
+    font-size: xx-large;
 }
 
 .color-pink {
     background-color: white;
-    height: 75px;
-    margin: 10px;
+    height: 70px;
+    width: 100%;
+    margin: 40px;
     display:flex;
-    justify-content: space-around;
+    justify-content: space-between;
+ 
 }
 .pink1 {
     background-color:pink;   
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink2 {
     background-color: pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink3 {
     background-color:pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 25%;
 }
 .pink4 {
     background-color: pink;
     border: 2px solid black;
-    flex-basis: 10%;
+    flex-basis: 15%;
+    width: 15%;
+
 }
 .roundg {
-    height: 75px;
-    width: 75px;
+    margin-right: 30px;
+    width: 25%;
     background-color: green;
     border-radius: 50%;
     border: 2px solid black;
-    flex-basis: 8%;
+    flex-basis: 15%;
 }
 
 .color-grey {
     background-color: white;
-    height: 150px;
+    height: 140px;
+    width: 100%;
     margin: 10px;
     display:flex;
     justify-content: space-between;
@@ -66,24 +76,27 @@
 .color-blue {
     background-color: dodgerblue;
     border: 2px solid black ;
-    height: 150px;
+    height: 160px;
+    width: 100%;
     margin: 10px;
     display:flex;
     justify-content: end;
-
+    align-items: center;
 }
 .about {
     background-color: steelblue;  
     font-size: x-large; 
+    text-align: center;
     color: white;
     border: 2px solid black;
     height: 120px;
     width: 120px;
-    margin: 10px;
+    margin: 30px;
 }
 .support {
     background-color: steelblue;   
     font-size: x-large;
+    text-align: center;
     color: white;
     border: 2px solid black;
     height: 120px;
@@ -95,6 +108,7 @@
     background-color: steelblue;   
     color: white;
     font-size: x-large;
+    text-align: center;
     border: 2px solid black;
     height: 120px;
     width: 120px;
