--- a/css/practice13.css
+++ b/css/practice13.css
@@ -1,45 +1,52 @@
-.container-1 { 
+.container-1 {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 1000px;
-    align-items: strech;
-    margin: 2%;
+
 
 }
+
 .color-yellow {
     width: 30%;
     background-color: yellow;
     border: 2px solid black;
     flex-direction: row;
-    height: 100%;
+    height: 970px;
     margin: 2%;
 }
+
 .main {
     display: flex;
     width: 50%;
+    height: 100%;
     flex-direction: column;
-    justify-content: space-between;
-    margin: 2%;
+    align-items: center;
+    margin: 1%;
 }
+
 .color-grey {
     width: 100%;
     background-color: grey;
     border: 2px solid black;
-    height: 100%;
-    margin: 2%;
+    height: 80%;
+
+    margin-top: 3%;
 }
+
 .color-blue {
     width: 100%;
     height: 100%;
     background-color: skyblue;
     border: 2px solid black;
-    margin: 2%;
+    margin: 3%;
+    margin-bottom: 2%;
 }
+
 .color-pink {
     width: 30%;
     background-color: pink;
     border: 2px solid black;
     flex-direction: row;
-    height: 100%;
+    height: 970px;
     margin: 2%;
 }
